Fixed `emu-name` element being invisible on desktop due to missing selector

--- a/resources/stylesheets/header.css
+++ b/resources/stylesheets/header.css
@@ -38,9 +38,11 @@
   position: absolute;
   left: 50px;
 }
+@media (orientation: portrait) {
   #emu-name {
     display: none;
   }
+}
 
 #link_tray {
   display: flex;
